See pending friend requests
